# 3D-Explorer

./: .gitignore  3D-Explorer.pro  3dexplorer.qrc  CMakeLists.txt  Doxyfile  PLAN  README.md  animation.cpp  common.h  config.cpp  control.cpp  directory.cpp  directory.h  hud.fsh  hud.vsh  imageobject.cpp  imageobject.h  imageviewer.cpp  imageviewer.h  loadmodel.cpp  main.cpp  mainwindow.cpp  mainwindow.h  meshobject.cpp  meshobject.h  my3dview.cpp  my3dview.h  myscene.cpp  myscene.h  outlinepainter.cpp  outlinepainter.h  paint.cpp  pdfviewer.cpp  pdfviewer.h  pickobject.cpp  pickobject.h  room.cpp  room.h  untitled.pro  view.cpp  (+2 more)
config/: main.conf  room1.conf  shelf.conf
data/: cd.mtl  chest.mtl  common.mtl  cube.mtl  desk.mtl  door.mtl  door.mtl.bak  door_anim.mtl.bak  file-pdf.mtl  file-text.mtl  file.mtl  file.mtl.bak  file.obj.bak  frame2.mtl.bak  light.mtl  phonograph.mtl  shelf.mtl.bak  test.mqo  trash.mtl
data/chest/: chest.mtl
data/files/: file-music.mtl  file-video.mtl  musicnote.mtl
lib/: gldrawbuffersurface.cpp  gldrawbuffersurface.h  glmaskedsurface.cpp  glmaskedsurface.h  glview.cpp  glview.h
model/: shelf.slots  trash.mtl
shader/: box.fsh  box.vsh  hblur.fsh  ortho.vsh  outline.fsh  phong.fsh  phong.vsh  vblur.fsh
src/: main.cpp
